--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 	</dependencies>
 
 	<build>
+		<resources>
+		    <resource>
+		        <directory>${basedir}/src/main/resources</directory>
+		        <filtering>true</filtering>
+		    </resource>
+		</resources>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
@@ -54,6 +60,7 @@
 			     <configuration>
          			 <doCheck>true</doCheck>
          			 <doUpdate>true</doUpdate>
+         			 <shortRevisionLength>5</shortRevisionLength>
         		</configuration>
 			</plugin>
 			<plugin>
@@ -72,5 +79,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
